@@ -1,4 +1,4 @@
-# Copyright (c) 2016, 2019, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2016, 2021, Oracle and/or its affiliates. All rights reserved.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2.0, as
@@ -73,6 +73,9 @@ class DbDoc(object):
 
     def __getitem__(self, index):
         return self.__dict__[index]
+
+    def __contains__(self, item):
+        return item in self.__dict__
 
     def copy(self, doc_id=None):
         """Returns a new copy of a :class:`mysqlx.DbDoc` object containing the
